--- a/app.css
+++ b/app.css
@@ -116,13 +116,28 @@ body {
 
 }
 
+#flechaArriba{
+  position: fixed;
+  bottom: 40px;
+  right: -140px;
+  width: 7vh;
+  border-radius: 28%;
+  z-index: 3;
+  background-color: #393939;
+  transition: 1.5s;
+}
+#flechaArriba:hover{
+  background-color: white;
+}
 
 .header {
     width: 100%;
+    height: 9vh;
     min-height: 2em;
 
-
-    padding: 1em 1em;
+    font-family: 'Anton', sans-serif;
+    padding: 0em 2em;
+    margin-bottom: 1em;
 
     display: flex;
     flex-flow: row wrap;
@@ -139,9 +154,16 @@ body {
     align-items: center;
 }
 .header .li{
-
+  font-size:3vh;
   margin: 0 1em;
 }    
+.header .li:hover{
+  background-color: white;
+  color:black;
+  padding: 2vh;
+  transition: 0.5s;
+  border-radius: 20px;
+}
 
 .header .img {
     width: 20vh;
@@ -159,7 +181,7 @@ body {
 
 .inicio{
     /* border: 1px solid white; */
-    background-color:blanchedalmond;
+    background: url(./assets/5.jpg);
     min-height: 85vh;
     display: flex;
     flex-flow: column wrap;
@@ -173,8 +195,15 @@ body {
 
 .main .h1{
     font-size: 10vh;
-    /* border-bottom: 1px solid black; */
+    border:19px solid black;
+    border-radius: 10px;
+    padding: 2vh;
 
+}
+.main .h1:hover{
+  background-color: white;
+  color:black;
+  transition:0.5s;
 }
 
 .h1{
